# cornerstone

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile.bsd  Makefile.lx  Makefile.mac  README.md  sources
.github/workflows/: ccpp.yml
cmake/: cornerstone-config.cmake.in
include/: asio_service.hxx  async.hxx  basic_types.hxx  buffer.hxx  cluster_config.hxx  context.hxx  cornerstone.hxx  delayed_task.hxx  delayed_task_scheduler.hxx  events.hxx  fs_log_store.hxx  log_entry.hxx  log_store.hxx  log_val_type.hxx  logger.hxx  msg_base.hxx  msg_type.hxx  peer.hxx  pp_util.hxx  ptr.hxx  raft_params.hxx  raft_server.hxx  req_msg.hxx  resp_msg.hxx  rpc_cli.hxx  rpc_cli_factory.hxx  rpc_exception.hxx  rpc_listener.hxx  snapshot.hxx  snapshot_sync_ctx.hxx  snapshot_sync_req.hxx  srv_config.hxx  srv_role.hxx  srv_state.hxx  state_machine.hxx  state_mgr.hxx  strfmt.hxx  timer_task.hxx
msvc/: cornerstone.sln  cornerstone.vcxproj  cornerstone.vcxproj.filters
src/: asio_service.cxx  buffer.cxx  cluster_config.cxx  fs_log_store.cxx  peer.cxx  raft_server.cxx  raft_server_req_handlers.cxx  raft_server_resp_handlers.cxx  snapshot.cxx  snapshot_sync_req.cxx  srv_config.cxx
tests/: Makefile.bsd  Makefile.lx  Makefile.mac  Makefile.win  sources
tests/src/: test_async_result.cxx  test_buffer.cxx  test_everything_together.cxx  test_impls.cxx  test_log_store.cxx  test_logger.cxx  test_ptr.cxx  test_runner.cxx  test_scheduler.cxx  test_serialization.cxx  test_strfmt.cxx
